--- a/www/map.html
+++ b/www/map.html
@@ -48,11 +48,39 @@ html, body {
 		</div>
 	</div>
 </div>
+<script src="cordova.js"></script>
 <script src="js/jquery-1.11.3.min.js"></script> 
 <script src="js/bootstrap.min.js"></script> 
-<script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script> 
+<script src="http://maps.google.com/maps/api/js"></script>
 <script src="js/common.js"></script> 
 <script>
+
+var myloc = null;
+
+document.addEventListener("deviceready", onDeviceReady, false);
+
+$(document).ready(function(e) {
+	onDeviceReady();
+});
+
+function onDeviceReady() {
+	if (!navigator.geolocation){
+		console.log('Geolocation not  available');
+	}else{
+		navigator.geolocation.watchPosition(showPosition, onShortError, { maximumAge: 0, timeout: 5000, enableHighAccuracy:true });
+	}
+}
+
+function onShortError(error){
+	console.log(error);
+}
+function showPosition(pos){
+	var me = new google.maps.LatLng(pos.coords.latitude, pos.coords.longitude);
+	if(!empty(myloc)){
+		//console.log(pos.coords.latitude);
+		myloc.setPosition(me);
+	}
+}
 
 $(document).ready(function(e) {
 	
@@ -96,10 +124,10 @@ $(document).ready(function(e) {
 		scrollwheel: false,
 	};
 					 
-    var map = new google.maps.Map(document.getElementById('map'), mapOptions);
-    var infowindow = new google.maps.InfoWindow({maxWidth: 400});
+	var map = new google.maps.Map(document.getElementById('map'), mapOptions);
+   var infowindow = new google.maps.InfoWindow({maxWidth: 400});
 
-	var myloc = new google.maps.Marker({
+	myloc = new google.maps.Marker({
 		clickable: false,
 		icon: new google.maps.MarkerImage('//maps.gstatic.com/mapfiles/mobile/mobileimgs2.png', new google.maps.Size(22,22), new google.maps.Point(0,18), new google.maps.Point(11,11)),
 		shadow: null,
@@ -123,14 +151,6 @@ $(document).ready(function(e) {
 	var markersArray = [];
 	
 	loadMarkers();
-	
-	
-if (navigator.geolocation) navigator.geolocation.watchPosition(function(pos) {
-    var me = new google.maps.LatLng(pos.coords.latitude, pos.coords.longitude);
-    myloc.setPosition(me);
-}, function(error) {
-    // ...
-});	
 
 function loadMarkers(){
 	
