--- a/www/chef-profile-edit-with-map-picker.html
+++ b/www/chef-profile-edit-with-map-picker.html
@@ -187,7 +187,7 @@ $(document).ready(function(e) {
 			formData = $(form).serialize();
 			formData += '&userId='+localStorage.getItem('userId')+'&userToken='+localStorage.getItem('userToken'); 
 			$.ajax({
-				type: "POST", dataType: 'json', url: "http://mobileapi.foodiesys.com/foodie-mssql/ajax.php?h=chefUpdate", data: formData,
+				type: "POST", dataType: 'json', url: ServerAjax+"?h=chefUpdate", data: formData,
 				beforeSend: function() { waitingDialog.show('Loading', {dialogSize: 'sm', progressType: 'info'}); },
 				complete: function() { waitingDialog.hide(); },
 			}).fail(  ajaxError )
