--- a/www/chef-reservations.html
+++ b/www/chef-reservations.html
@@ -163,7 +163,7 @@ $(document).ready(function(e) {
 			formData = $(form).serialize();
 			formData += '&userId='+localStorage.getItem('userId')+'&userToken='+localStorage.getItem('userToken'); 
 			$.ajax({
-				type: "POST", dataType: 'json', url: "http://mobileapi.foodiesys.com/foodie-mssql/ajax.php?h=finishOrder", data: formData,
+				type: "POST", dataType: 'json', url: ServerAjax+"?h=finishOrder", data: formData,
 				beforeSend: function() { waitingDialog.show('Loading', {dialogSize: 'sm', progressType: 'info'}); },
 				complete: function() { waitingDialog.hide(); },
 			}).fail(  ajaxError )
@@ -220,7 +220,7 @@ function QRonSuccess(result){
 			formData = 'Fcode='+key+'&res_id='+id;
 			formData += '&userId='+localStorage.getItem('userId')+'&userToken='+localStorage.getItem('userToken'); 
 			$.ajax({
-				type: "POST", dataType: 'json', url: "http://mobileapi.foodiesys.com/foodie-mssql/ajax.php?h=finishOrder", data: formData,
+				type: "POST", dataType: 'json', url: ServerAjax+"?h=finishOrder", data: formData,
 				beforeSend: function() { waitingDialog.show('Loading', {dialogSize: 'sm', progressType: 'info'}); },
 				complete: function() { waitingDialog.hide(); },
 			}).fail(  ajaxError )
@@ -259,7 +259,7 @@ function loadReservations(){
 	formData = 'user_id='+ localStorage.getItem('userId');
 	formData += '&userToken='+ localStorage.getItem('userToken');
 	$.ajax({
-		type: "POST", dataType: 'json', url: "http://mobileapi.foodiesys.com/foodie-mssql/ajax.php?h=getChefReservations", data: formData,
+		type: "POST", dataType: 'json', url: ServerAjax+"?h=getChefReservations", data: formData,
 		beforeSend: function() { $('div.aLoading').show();  },
 		complete: function() { $('div.aLoading').hide(); },
 	}).fail(  ajaxError )
