--- a/www/main.html
+++ b/www/main.html
@@ -27,29 +27,22 @@ html, body{ height:100% }
 </style>
 </head>
 <body style="background-color:#FFF;">
-<div style="height:100%; background:url(images/splash.png) center center no-repeat"> </div>
+<div style="height:100%; background:url(images/splash.png?) center center no-repeat">
+
+<div id="bottom-bar" style="padding:5px; text-align:center">
+	
+Copyright (c) 2016  Foodie Systems, Inc.
+	
+</div>	
+</div>
 <script src="cordova.js"></script>
 <script src="js/jquery-1.11.3.min.js"></script> 
 <script src="js/bootstrap.min.js"></script>
 <script src="js/common.js"></script>
 <script>
 
-document.addEventListener("deviceready", onDeviceReady, false);
+
 var Timeouts = 0;
-
-$(document).ready(function(e) {
-	onDeviceReady();
-});
-
-function onDeviceReady() {
-	
-	if (!navigator.geolocation){
-		alert('Geolocation not  available');
-	}else{
-		//var watchId = navigator.geolocation.watchPosition(showPosition, onShortError, { maximumAge: 300000, timeout: 5000, enableHighAccuracy:true });
-		navigator.geolocation.getCurrentPosition(showPosition, onShortError, { maximumAge: 0, timeout: 5000, enableHighAccuracy:true });
-	}
-}
 
 function onShortError(error){
 	try{
@@ -78,22 +71,22 @@ function geoLocationError(error){
 
 function showPosition(position) {
 	try{
+		if( Timeouts > 3){
+			lat = 26.1644398;
+			lng = -80.1621635;
+		}else{
+			var lat = position.coords.latitude;
+			var lng = position.coords.longitude;
+		}
 	
-	if( Timeouts > 3){
-		lat = 26.1644398;
-		lng = -80.1621635;
-	}else{
-		var lat = position.coords.latitude;
-		var lng = position.coords.longitude;
-	}
-	
-	localStorage.setItem('lat', lat );
-	localStorage.setItem('lng', lng );
-	
+		localStorage.setItem('lat', lat );
+		localStorage.setItem('lng', lng );
+		
+		setTimeout(function(){ document.location = 'register.html'; }, 1000);
+	/*
 	var formData = 'lat='+localStorage.getItem("lat")+'&lng='+localStorage.getItem("lng")+'&user_id='+localStorage.getItem("userId")+'&app_token='+localStorage.getItem("userToken");
-
 	$.ajax({
-		type: "POST", dataType: 'json', url: "http://mobileapi.foodiesys.com/foodie-mssql/ajax.php?h=initApp",
+		type: "POST", dataType: 'json', url: ServerAjax+"?h=initApp",
 		data: formData
 	}).fail(  ajaxError )
 	.done(function(data){
@@ -118,12 +111,10 @@ function showPosition(position) {
 		}
 		if (data.JS) { eval(data.JS); }
 	});// ajax
-
-	
+	*/
 	}catch(err) {
 		alert(err.message);
 	}
-	
 }
 /** /
 if(localStorage.getItem("userId")=== null){
@@ -132,6 +123,13 @@ if(localStorage.getItem("userId")=== null){
 	setTimeout(function(){ document.location = 'map.html'; }, 2000);
 }
 /**/
+
+if (!navigator.geolocation){
+	alert('Geolocation not  available');
+}else{
+	//var watchId = navigator.geolocation.watchPosition(showPosition, onShortError, { maximumAge: 300000, timeout: 5000, enableHighAccuracy:true });
+	navigator.geolocation.getCurrentPosition(showPosition, onShortError, { maximumAge: 0, timeout: 5000, enableHighAccuracy:true });
+}
 
 </script>
 </body>
