--- a/www/about.html
+++ b/www/about.html
@@ -30,9 +30,9 @@
 	<h1 id="menu-button"> <a id="menu-toggle" href="#" class="btn-menu toggle"> <i class="fa fa-bars"></i> </a> </h1>
 	<p class="pageTitle">About Foodie</p>
 	<div class="container">
-	<h4>Version — 1.1</h4>
+	<h4>Version — 1.0</h4>
 	<br />
-	Copyright &copy; 2016 Foodie Systems, Inc. All Rights Reserved.
+	Copyright &copy; 2016 Foodie Systems, Inc.
 	</div>
 </div>
 <br />
