--- a/www/map.html
+++ b/www/map.html
@@ -21,9 +21,68 @@ html, body {
 	height: 100%;
 }
 
+	@-moz-keyframes pulsate {
+		from {
+			-moz-transform: scale(0.25);
+			opacity: 1.0;
+		}
+		95% {
+			-moz-transform: scale(1.3);
+			opacity: 0;
+		}
+		to {
+			-moz-transform: scale(0.3);
+			opacity: 0;
+		}
+	}
+	@-webkit-keyframes pulsate {
+		from {
+			-webkit-transform: scale(0.25);
+			opacity: 1.0;
+		}
+		95% {
+			-webkit-transform: scale(1.3);
+			opacity: 0;
+		}
+		to {
+			-webkit-transform: scale(0.3);
+			opacity: 0;
+		}
+	}
+	/* get the container that's just outside the marker image, 
+		which just happens to have our Marker title in it */
+	#map div.gmnoprint[title="I might be here"] {
+		-moz-animation: pulsate 1.5s ease-in-out infinite;
+		-webkit-animation: pulsate 1.5s ease-in-out infinite;
+		border:1pt solid #fff;
+		/* make a circle */
+		-moz-border-radius:51px;
+		-webkit-border-radius:51px;
+		border-radius:51px;
+		/* multiply the shadows, inside and outside the circle */
+		-moz-box-shadow:inset 0 0 5px #06f, inset 0 0 5px #06f, inset 0 0 5px #06f, 0 0 5px #06f, 0 0 5px #06f, 0 0 5px #06f;
+		-webkit-box-shadow:inset 0 0 5px #06f, inset 0 0 5px #06f, inset 0 0 5px #06f, 0 0 5px #06f, 0 0 5px #06f, 0 0 5px #06f;
+		box-shadow:inset 0 0 5px #06f, inset 0 0 5px #06f, inset 0 0 5px #06f, 0 0 5px #06f, 0 0 5px #06f, 0 0 5px #06f;
+		/* set the ring's new dimension and re-center it */
+		height:51px!important;
+		margin:-18px 0 0 -18px;
+		width:51px!important;
+	}
+	/* hide the superfluous marker image since it would expand and shrink with its containing element */
+/*	#map div[style*="987654"][title] img {*/
+	#map div.gmnoprint[title="I might be here"] img {
+		display:none;
+	}
+	/* compensate for iPhone and Android devices with high DPI, add iPad media query */
+	@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (device-width: 768px) {
+		#map div.gmnoprint[title="I might be here"] {
+			margin:-10px 0 0 -10px;
+		}
+	}
+
 </style>
 </head>
-<body id="wrapper">
+<body onload="onLoad()" id="wrapper">
 <div id="sidebar-wrapper">
 	<nav id="nav">
 		<ul class="sidebar-nav nav" id="navRight">
@@ -64,14 +123,35 @@ html, body {
 
 var myloc = null;
 
+function onLoad(){ 
+	document.addEventListener("deviceready", onDeviceReady, false);
+}
+
+function onDeviceReady() {
+	useragent = navigator.userAgent;
+	if ( useragent.indexOf('iPhone') !== -1 || useragent.indexOf('Android') !== -1 ) {
+		navigator.geolocation.watchPosition( 
+			showPosition, 
+			onShortError, 
+			{ enableHighAccuracy: true, maximumAge: 30000, timeout: 27000 }
+		);			
+		// or let other geolocation capable browsers to get their static position
+	} else if ( navigator.geolocation ) {
+		navigator.geolocation.getCurrentPosition( showPosition, onShortError );
+	}
+}
+
+
 
 function onShortError(error){
 	console.log(error);
 }
 function showPosition(pos){
+	
 	var me = new google.maps.LatLng(pos.coords.latitude, pos.coords.longitude);
 	if(!empty(myloc)){
 		myloc.setPosition(me);
+		
 	}
 }
 
@@ -118,9 +198,10 @@ $(document).ready(function(e) {
 
   /**/
   
+  var myLatLng =  new google.maps.LatLng( localStorage.getItem('lat') , localStorage.getItem('lng') );
   
 	var mapOptions = {
-		center: new google.maps.LatLng( localStorage.getItem('lat') , localStorage.getItem('lng') ),
+		center: myLatLng,
 		mapTypeId: google.maps.MapTypeId.ROADMAP,
 		zoom:9,
 		scrollwheel: false,
@@ -129,25 +210,24 @@ $(document).ready(function(e) {
 	var map = new google.maps.Map(document.getElementById('map'), mapOptions);
    var infowindow = new google.maps.InfoWindow({maxWidth: 400});
 
+	var imageA = new google.maps.MarkerImage(
+							'images/bluedot_retina.png',
+							null, // size
+							null, // origin
+							new google.maps.Point( 8, 8 ), // anchor (move to center of marker)
+							new google.maps.Size( 17, 17 ) // scaled size (required for Retina display icon)
+						);
+
 	myloc = new google.maps.Marker({
-		clickable: false,
-		icon: new google.maps.MarkerImage('http://maps.gstatic.com/mapfiles/mobile/mobileimgs2.png', new google.maps.Size(22,22), new google.maps.Point(0,18), new google.maps.Point(11,11)),
-		shadow: null,
-		zIndex: 999,
+		flat: true,
+		icon: imageA,
 		map: map,
-		title : 'me'
+		optimized: false,
+		position: myLatLng,
+		title: 'I might be here',
+		visible: true
 	});
   
-
-	var image = {
-    url: '/media/m2.png',
-    // This marker is 20 pixels wide by 32 pixels high.
-    size: new google.maps.Size(24, 24),
-    // The origin for this image is (0, 0).
-    origin: new google.maps.Point(0, 0),
-    // The anchor for this image is the base of the flagpole at (0, 32).
-    anchor: new google.maps.Point(12, 12)
-  	};
 
    var marker, i, chef;
 	var jsonData;
@@ -205,11 +285,10 @@ function loadMarkers(){
 }
 
 
-if (!navigator.geolocation){
-	console.log('Geolocation not  available');
-}else{
-	navigator.geolocation.watchPosition(showPosition, onShortError, { maximumAge: 0, timeout: 5000, enableHighAccuracy:true });
-}
+
+
+
+
 
 	 
 /**/
