--- a/www/chef-profile-edit.html
+++ b/www/chef-profile-edit.html
@@ -139,7 +139,7 @@
 		
 		<div class="form-group">
 			<label for="">Referral Email (Optional)</label>
-			<input id="txtReferalEmail" class="form-control required email" type="email" name="referral_email" value="" placeholder="Referral Email">
+			<input id="txtReferalEmail" class="form-control email" type="email" name="referral_email" value="" placeholder="Referral Email">
 		</div>
 		
 		<input type="hidden" name="image1" id="hd_image1" value="" />
