--- a/www/chef-reservations.html
+++ b/www/chef-reservations.html
@@ -300,7 +300,7 @@ function loadReservations(){
 				}
 				//$DTemp.remove();
 			}else{
-				$('#chef-foods').html('<center>No Rocord Found!</center>');
+				$('#chef-foods').html('<center>No Reservations Found</center>');
 			}
 		}else { 
 			BAlert.find('.modal-header h3').html('<i class="fa fa-exclamation-triangle"></i> Error');
