--- a/www/chef_profile.html
+++ b/www/chef_profile.html
@@ -507,7 +507,7 @@ function loadDishes(chef_id){
 				}
 				$('#btnStartOrder').removeClass('disabled');
 			}else{
-				$('#chef-foods').html('<center>No Rocord Found!</center>');
+				$('#chef-foods').html('<center>No Dishes Found</center>');
 			}
 		}else { 
 			BAlert.find('.modal-header h3').html('<i class="fa fa-exclamation-triangle"></i> Error');
