--- a/www/chef-dishes.html
+++ b/www/chef-dishes.html
@@ -231,7 +231,7 @@ function loadDishes(chef_id){
 				}
 				//$DTemp.remove();
 			}else{
-				$('#chef-foods').html('<center>No Rocord Found!</center>');
+				$('#chef-foods').html('<center>No Dishes Found</center>');
 			}
 		}else { 
 			BAlert.find('.modal-header h3').html('<i class="fa fa-exclamation-triangle"></i> Error');
